--- a/src/app/components/list-reserva/detalle-reserva/detalle-reserva.component.css
+++ b/src/app/components/list-reserva/detalle-reserva/detalle-reserva.component.css
@@ -22,3 +22,25 @@
   
   @keyframes fadeIn {0% {opacity:0}to{opacity: 1}}
   @-webkit-keyframes fadeIn {0% {opacity:0}to{opacity: 1}}
+
+  ul{       
+    margin-right: 20px;
+}
+
+.card-header{
+font-weight: bolder;    
+}
+
+.list-group-item.list-group-item-primary{
+text-align: center;
+font-weight: bolder;    
+}
+
+.table{
+text-align: center;
+}
+.text-end{
+text-align:right ;
+padding: .5rem 7rem;
+font-weight: bold;
+}
