--- a/src/app/components/nota-venta/detalle-nota-v/detalle-nota-v.component.html
+++ b/src/app/components/nota-venta/detalle-nota-v/detalle-nota-v.component.html
@@ -1,26 +1,3 @@
-<style>
-    ul{       
-        margin-right: 20px;
-    }
-
-.card-header{
-    font-weight: bolder;    
-}
-
-.list-group-item.list-group-item-primary{
-    text-align: center;
-    font-weight: bolder;    
-}
-
-.table{
-  text-align: center;
-}
-.text-end{
-  text-align:right ;
-  padding: .5rem 7rem;
-  font-weight: bold;
-}
-</style>
 
 <!--MODAL-->
 
@@ -37,7 +14,7 @@
         <br>
         <ul class="vendedor">
             <li class="list-group-item list-group-item-primary">VENDEDOR</li>
-            <li class="list-group-item">{{NotaV.cuenta.usuario.nombres}} {{NotaV.cuenta.usuario.apellidos}}</li>
+            <li class="list-group-item" style="text-align: center; ">{{NotaV.cuenta.usuario.nombres}} {{NotaV.cuenta.usuario.apellidos}}</li>
           </ul>
         
           <ul>
@@ -83,9 +60,3 @@
     </div>
   </div>
 </div>
-
-  
-  
-  <!-- <div class="modal-footer">
-    <button type="button" class="btn btn-success" >Ok!</button>
-</div> -->
